# GPT-DLP-BE

./: CLAUDE.md  Dockerfile  README_QUICKSTART.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 62e5433b8c99_initial_migration_pii_detection_and_.py
app/: main.py
app/ai/: model_manager.py  pii_detector.py  similarity_detector.py
app/api/routers/: analyze.py  documents.py  pii.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: detection.py  documents.py
app/repository/: detection_repo.py  vector_repo.py
app/schemas/: analyze.py  documents.py  pii.py
app/services/: analyze_service.py  document_service.py  pii_service.py
app/utils/: entity_extractor.py  tag_parser.py  text_chunker.py
