[project]
name = "ai-tls-dlp-be"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.5.3",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.3",
]
